docs(website): added links to getting started guides from the integration guides
this should help developers find the right guide depending on their context

--- a/documentation/serenity-js.org/docs/test-runners/cucumber.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/cucumber.mdx
@@ -9,7 +9,7 @@ sidebar_position: 1
 and a test runner capable of executing test scenarios
 written in [plain language](https://cucumber.io/docs/guides/overview/).
 
-**You will learn:**
+**In this article, you will learn:**
 - How to use [Serenity/JS reporting services](/handbook/reporting/), including the [Serenity BDD reporter](/handbook/reporting/serenity-bdd-reporter), even if your test scenarios don't follow the Screenplay Pattern yet
 - How to implement Cucumber [step definitions](https://cucumber.io/docs/cucumber/step-definitions/?lang=javascript) using reusable [Serenity/JS Screenplay Pattern](/handbook/design/screenplay-pattern) APIs
 
