--- a/documentation/serenity-js.org/docs/test-runners/jasmine.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/jasmine.mdx
@@ -9,7 +9,7 @@ particularly popular with projects based on [Angular](https://angular.io/) frame
 If your project already uses Jasmine to run its unit tests,
 you can use the same runner for your acceptance tests too.
 
-**You will learn:**
+**In this article, you will learn:**
 - How to use [Serenity/JS reporting services](/handbook/reporting/), including the [Serenity BDD reporter](/handbook/reporting/serenity-bdd-reporter), even if your test scenarios don't follow the Screenplay Pattern yet
 - How to implement Jasmine test scenarios using reusable [Serenity/JS Screenplay Pattern](/handbook/design/screenplay-pattern) APIs
 
