--- a/documentation/serenity-js.org/docs/test-runners/mocha.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/mocha.mdx
@@ -8,7 +8,7 @@ sidebar_position: 3
 such as [automatic retry of failed tests](/api/mocha-adapter/interface/MochaConfig).
 If your project already uses Mocha to run its unit tests, you can use the same runner for your acceptance tests too.
 
-**You will learn:**
+**In this article, you will learn:**
 - how to use [Serenity/JS reporting services](/handbook/reporting/), including the [Serenity BDD reporter](/handbook/reporting/serenity-bdd-reporter), even if your test scenarios don't follow the Screenplay Pattern yet
 - how to implement Mocha test scenarios using reusable [Serenity/JS Screenplay Pattern](/handbook/design/screenplay-pattern) APIs
 
