--- a/documentation/serenity-js.org/docs/test-runners/playwright-test.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/playwright-test.mdx
@@ -10,7 +10,12 @@ of browser-based end-to-end test automation using [Playwright](https://playwrigh
 Playwright supports all modern rendering engines including Chromium, WebKit, and Firefox.
 It also lets you execute test scenarios on Windows, Linux, and macOS, locally or on CI, headless or headed with native mobile emulation of Google Chrome for Android and Mobile Safari.
 
-**You will learn:**
+:::tip Extending existing Playwright Test suites
+If you want to add Serenity/JS to an existing Playwright Test suite, check out
+[Extending Playwright Test with Serenity/JS](/handbook/getting-started/serenity-js-with-playwright-test/).
+:::
+
+**In this article, you will learn:**
 - How to use [Serenity/JS reporting services](/handbook/reporting/), including the [Serenity BDD reporter](/handbook/reporting/serenity-bdd-reporter), even if your test scenarios don't follow the Screenplay Pattern yet
 - How to implement Playwright Test scenarios using reusable [Serenity/JS Screenplay Pattern](/handbook/design/screenplay-pattern) APIs and the [Serenity/JS Playwright module](/api/playwright)
 - How to augment native Playwright Test HTML reports with information gathered by your [Serenity/JS actors](/api/core/class/Actor)
