--- a/documentation/serenity-js.org/docs/test-runners/protractor.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/protractor.mdx
@@ -25,7 +25,12 @@ Using Serenity/JS [Screenplay Pattern APIs](/handbook/design/screenplay-pattern)
 will also help you **future-proof your codebase** and make it **agnostic** of the underlying integration tools.
 :::
 
-**You will learn:**
+:::tip Extending existing Protractor test suites
+If you want to add Serenity/JS to an existing Protractor test suite, check out
+[Extending Protractor with Serenity/JS](/handbook/getting-started/serenity-js-with-protractor/).
+:::
+
+**In this article, you will learn:**
 - How to use [Serenity/JS reporting services](/handbook/reporting/), including the [Serenity BDD reporter](/handbook/reporting/serenity-bdd-reporter), even if your test scenarios don't follow the Screenplay Pattern yet
 - How to implement Protractor test scenarios using reusable [Serenity/JS Screenplay Pattern](/handbook/design/screenplay-pattern) APIs and the [Serenity/JS Protractor module](/api/webdriverio)
 - How [Serenity/JS Web APIs](/api/web) will help you **reliably migrate** your tests from Protractor to WebdriverIO (the most compatible tool)
