--- a/documentation/serenity-js.org/docs/test-runners/webdriverio.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/webdriverio.mdx
@@ -9,7 +9,12 @@ WebdriverIO leverages the power of the [WebDriver](https://w3c.github.io/webdriv
 by all browser vendors and guarantees a true cross-browser testing experience.
 Furthermore, WebdriverIO also supports alternative, proprietary automation protocols like [Chrome DevTools](https://chromedevtools.github.io/devtools-protocol/) via [Puppeteer](https://www.npmjs.com/package/puppeteer).
 
-**You will learn:**
+:::tip Extending existing WebdriverIO Test suites
+If you want to add Serenity/JS to an existing WebdriverIO test suite, check out
+[Extending WebdriverIO with Serenity/JS](/handbook/getting-started/serenity-js-with-webdriverio/).
+:::
+
+**In this article, you will learn:**
 - How to create a new Serenity/JS + WebdriverIO project
 - How to use [Serenity/JS reporting services](/handbook/reporting/), including the [Serenity BDD reporter](/handbook/reporting/serenity-bdd-reporter), even if your test scenarios don't follow the Screenplay Pattern yet
 - How to implement WebdriverIO test scenarios using reusable [Serenity/JS Screenplay Pattern](/handbook/design/screenplay-pattern) APIs and the [Serenity/JS WebdriverIO module](/api/webdriverio)
