docs(serenity-bdd): updated examples to remove the redundant --features switch
serenity-bdd run command now auto-detects the requirements hierarchy root directory

--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -107,7 +107,7 @@ on using:
     "clean": "rimraf target",
     "test": "failsafe clean test:execute test:report",
     "test:execute": "cucumber-js",
-    "test:report": "serenity-bdd run --features ./features ",
+    "test:report": "serenity-bdd run"
   }
 }
 ```
