docs(serenity-bdd): documented the new Serenity BDD reporting features
Related tickets: re #1147

--- a/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
+++ b/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
@@ -588,7 +588,7 @@ Then('{pronoun} should see top search result of', (actor: Actor, expectedResult:
 The easiest way to **experience** working with Serenity/JS and the Screenplay Pattern is
 to **follow the tutorial** and write [**your first web scenario**](/handbook/web-testing/your-first-web-scenario)!
 
-When you're ready to **start your own test automation project**, use one of the available [**Serenity/JS Project Templates**](/handbook/getting-started#serenityjs-project-templates)
+When you're ready to **start your own test automation project**, use one of the available [**Serenity/JS Project Templates**](/handbook/getting-started/project-templates/)
 as they include a handful of Screenplay scenarios and combine some of the most popular configurations of Serenity/JS modules and test automation tools:
 
 - [REST API testing with Cucumber and Serenity/JS](https://github.com/serenity-js/serenity-js-cucumber-template)
@@ -604,7 +604,7 @@ and explore the [examples](https://github.com/serenity-js/serenity-js/tree/main/
 :::tip Try Serenity/JS in your browser
 Thanks to [Gitpod.io](/handbook/getting-started#serenityjs-gitpods),
 you can follow the [web testing tutorial](/handbook/web-testing/your-first-web-scenario)
-and use any of the [Serenity/JS Project Templates](/handbook/getting-started#serenityjs-project-templates) right here in your browser,
+and use any of the [Serenity/JS Project Templates](/handbook/getting-started/project-templates/) right here in your browser,
 no local installation required! 🚀
 :::
 
