--- a/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
@@ -36,7 +36,7 @@ If you get lost or stumble upon a problem you're not quite sure how to solve - a
 
 ## Launching your workspace
 
-All [Serenity/JS project templates](/handbook/getting-started#serenityjs-project-templates), such as the one we'll use in this chapter,
+All [Serenity/JS project templates](/handbook/getting-started/project-templates/), such as the one we'll use in this chapter,
 [support Gitpod.io workspaces](/handbook/getting-started#serenityjs-gitpods) and are configured to
 make it easy for you to use them in a Visual Studio Code-based development environment.
 Of course, since Serenity/JS tests are standards-based Node.js code, they'll work just as well in any other modern <abbr title="Integrated Development Environment">IDE</abbr>.
