--- a/documentation/serenity-js.org/src/pages/contributing.mdx
+++ b/documentation/serenity-js.org/src/pages/contributing.mdx
@@ -120,7 +120,7 @@ When reporting a bug, please kindly remember that the easier you make it for the
 - Provide a **detailed description** of what happened and don’t leave any important facts out. That said, try not to include any extraneous details that could derail or distract the people trying to help reproduce the issue you found.
 - Explain how the behaviour you observed is different from what you believe should have happened instead
 - Provide supplementary information:
-    - If you can reproduce and isolate the issue, use one of the [Serenity/JS Project Templates](/handbook/getting-started#serenityjs-project-templates) to create a minimalistic example that demonstrates the problem and attach a link to it to your ticket. While this requires a bit more work on your side, it will help us sort out the problem much quicker.
+    - If you can reproduce and isolate the issue, use one of the [Serenity/JS Project Templates](/handbook/getting-started/project-templates/) to create a minimalistic example that demonstrates the problem and attach a link to it to your ticket. While this requires a bit more work on your side, it will help us sort out the problem much quicker.
     - If you can reproduce the issue, but can't isolate it, add the [`StreamReporter`](/api/core/class/StreamReporter) to your Serenity/JS [stage crew](/api/core/class/SerenityConfig#crew), run the test again to trigger the bug, and attach the `StreamReporter`'s log to your ticket
     - If you can't reproduce the issue, please attach any additional information that might help us figure out what happened - screenshots and test execution logs are particularly useful.
 
