--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -49,52 +49,156 @@ details of any activities performed by Serenity/JS [actors](/api/core/class/Acto
 
 ### Installation
 
-To install the [`@serenity-js/serenity-bdd`](/api/serenity-bdd) module, run the following command in your computer terminal:
+To add the [`@serenity-js/serenity-bdd`](/api/serenity-bdd) module to your project, run the following command in your computer terminal:
 
 ```sh npm2yarn
 npm install --save-dev @serenity-js/core @serenity-js/serenity-bdd
 ```
 
-To learn more about the installation process, [follow the API documentation](/api/serenity-bdd).
+If you're starting a new project or need a reference implementation,
+consider using one of the [Serenity/JS Project Templates](/handbook/getting-started/project-templates/)
+as they all come with built-in support for Serenity BDD reporting.
 
-### Configuration
+### Configuring the Serenity BDD reporter
 
-To use the Serenity BDD Reporter, you need to register it together with the [Artifact Archiver](/api/core/class/ArtifactArchiver) so that the reports are stored to disk:
+To allow Serenity/JS to produce Serenity BDD-standard JSON reports, assign the `SerenityBDDReporter` to the `Stage`
+and configure the `ArtifactArchiver` to store the reports at the location where Serenity BDD expects to find them.
 
-```typescript
-import { configure } from '@serenity-js/core'
+This can be done:
+- via `playwright.config.ts`, if you're using Serenity/JS with [Playwright Test](/api/playwright-test)
+- via `wdio.conf.ts`, if you're using Serenity/JS with [WebdriverIO](/api/playwright-test)
+- via `protractor.conf.js`, if you're using Serenity/JS with [Protractor](/api/protractor)
+- programmatically, if you're using Serenity/JS with [any other test runner](/handbook/test-runners/)
+
+#### Configuring Playwright Test
+
+```typescript title="playwright.config.ts"
+import type { PlaywrightTestConfig } from '@serenity-js/playwright-test'
+
+const config: PlaywrightTestConfig = {
+    reporter: [
+        [ '@serenity-js/playwright-test', {
+            crew: [
+                '@serenity-js/serenity-bdd',
+                [ '@serenity-js/core:ArtifactArchiver', { outputDirectory: 'target/site/serenity' } ],
+            ]
+        }]
+    ],
+
+    // Other configuration omitted for brevity
+    // For details, see https://playwright.dev/docs/test-configuration
+}
+
+export default config
+```
+
+Learn more about using [Serenity/JS with Playwright Test](/api/playwright-test).
+
+#### Configuring WebdriverIO
+
+```typescript title="wdio.conf.ts"
+import { WebdriverIOConfig } from '@serenity-js/webdriverio'
+
+export const config: WebdriverIOConfig = {
+
+    framework: '@serenity-js/webdriverio',
+
+    serenity: {
+        crew: [
+            '@serenity-js/serenity-bdd',
+            [ '@serenity-js/core:ArtifactArchiver', { outputDirectory: 'target/site/serenity' } ],
+        ]
+    },
+
+    // Other configuration omitted for brevity
+    // For details, see https://webdriver.io/docs/options
+}
+```
+
+Learn more about using [Serenity/JS with WebdriverIO](/api/webdriverio).
+
+#### Configuring Protractor
+
+```javascript title="protractor.conf.js"
+exports.config = {
+
+    framework:      'custom',
+    frameworkPath:  require.resolve('@serenity-js/protractor/adapter'),
+
+    serenity: {
+        crew: [
+            '@serenity-js/serenity-bdd',
+            [ '@serenity-js/core:ArtifactArchiver', { outputDirectory: 'target/site/serenity' } ],
+        ]
+    },
+
+    // ...
+}
+```
+
+Learn more about using [Serenity/JS with Protractor](/api/protractor).
+
+#### Overriding default configuration
+
+By default, SerenityBDDReporter tries to [automatically detect](/api/serenity-bdd/interface/SerenityBDDReporterConfig/#specDirectory)
+the root directory of your [requirements hierarchy](https://serenity-bdd.github.io/docs/reporting/living_documentation#the-requirements-hierarchy).
+
+If you're using a non-standard directory structure,
+you can override the defaults in the [`crew`](/api/core/class/SerenityConfig/#crew) section of your config as follows:
+
+```ts
+  crew: [
+    [ '@serenity-js/serenity-bdd', { specDirectory: './e2e-specs' } ],
+  ]
+```
+
+#### Programmatic configuration
+
+```typescript title="serenity.config.ts"
+import { ArtifactArchiver, configure } from '@serenity-js/core'
+import { SerenityBDDReporter } from '@serenity-js/serenity-bdd'
 
 configure({
     crew: [
-        '@serenity-js/serenity-bdd',
-        [ '@serenity-js/core:ArtifactArchiver', { outputDirectory: 'target/site/serenity' } ],
-    ]
+        ArtifactArchiver.fromJSON({
+            outputDirectory: './target/site/serenity',
+        }),
+        SerenityBDDReporter.fromJSON({
+            specDirectory: './spec',
+        })
+    ],
 })
 ```
 
-To override the [default configuration](/api/serenity-bdd/interface/SerenityBDDReporterConfig/#Properties) of the reporter, provide a [SerenityBDDReporterConfig](/api/serenity-bdd/interface/SerenityBDDReporterConfig/) as the second element of the array:
+Learn more about [configuring Serenity/JS programmatically](/api/core/class/SerenityConfig).
 
-```typescript
-import { configure } from '@serenity-js/core'
+#### Serenity/JS 3 vs Serenity/JS 2 configuration syntax
 
-configure({
-    crew: [
-        [ '@serenity-js/serenity-bdd', { specDirectory: './features' } ],
-        [ '@serenity-js/core:ArtifactArchiver', { outputDirectory: 'target/site/serenity' } ],
-    ]
-})
+
+
+### Using Serenity BDD CLI
+
+To turn the Serenity BDD-standard JSON reports produced by the `SerenityBDDReporter` into Serenity BDD test reports,
+you need the [Serenity BDD reporting CLI](https://github.com/serenity-bdd/serenity-core).
+
+The Serenity BDD reporting CLI is a Java program, distributed as an executable `.jar` file and available to download from [Maven Central](https://central.sonatype.com/artifact/net.serenity-bdd/serenity-cli).
+
+The `@serenity-js/serenity-bdd` module ships with a command line tool called `serenity-bdd`, where:
+- `serenity-bdd update` command downloads the Serenity BDD CLI `jar` and caches it locally
+- `serenity-bdd run` command is a wrapper around the Serenity BDD CLI that invokes the Serenity BDD CLI `jar` to produce HTML reports based on the JSON reports generated by the `SerenityBDDReporter`
+
+To learn more about `serenity-bdd`, run the following command in your computer terminal:
+
+```sh
+npx serenity-bdd --help
 ```
-
-To learn how to configure Serenity BDD Reporter with your test runner, [follow the API documentation](/api/serenity-bdd).
-
-### Reporting
 
 To produce Serenity BDD reports, your test suite must:
-- download the Serenity BDD CLI, by calling `serenity-bdd update`, which will cache the CLI `jar` locally
-- produce intermediate Serenity BDD `.json` reports, by registering [`SerenityBDDReporter`](/api/serenity-bdd/class/SerenityBDDReporter)
-- invoke the Serenity BDD CLI when you want to produce the report, by calling `serenity-bdd run`
+- call `serenity-bdd update`, typically as part of the `postinstall` or `pretest` [NPM script](https://docs.npmjs.com/cli/v9/using-npm/scripts#life-cycle-operation-order)
+- use the [`SerenityBDDReporter`](/api/serenity-bdd/class/SerenityBDDReporter), which produces intermediate Serenity BDD `.json` reports
+- call `serenity-bdd run` when the test run completes to generate the aggregated HTML report
 
-The pattern used by all the [Serenity/JS Project Templates](/handbook/getting-started#serenityjs-project-templates) relies
+The pattern used by all the [Serenity/JS Project Templates](/handbook/getting-started/project-templates/) relies
 on using:
 - a [`postinstall`](https://docs.npmjs.com/cli/v9/using-npm/scripts#life-cycle-operation-order) NPM script to download the Serenity BDD CLI
 - [`npm-failsafe`](https://www.npmjs.com/package/npm-failsafe) to run the reporting process even if the test suite itself has failed (which is precisely when you need test reports the most...).
@@ -113,17 +217,302 @@ on using:
 ```
 Note that in the above code sample, you should configure `test:execute` to invoke your [test runner](/handbook/test-runners/) of choice.
 
-To learn more about the `SerenityBDDReporter`, please consult:
-- installation instructions in [`@serenity-js/serenity-bdd` documentation](/api/serenity-bdd),
-- configuration examples in [`SerenityBDDReporter`](/api/serenity-bdd/class/SerenityBDDReporter).
+### Downloading Serenity BDD CLI
 
-You might also want to explore [Serenity/JS example projects on GitHub](https://github.com/serenity-js/serenity-js/tree/main/examples).
+To download the Serenity BDD reporting CLI or to update it, use the `update` command:
+
+```console
+npx serenity-bdd update
+```
+
+To download Serenity BDD reporting CLI jar from your company's artifact repository, specify the `--repository` parameter:
+
+```
+npx serenity-bdd update --repository https://artifactory.example.org/
+```
+
+To learn more about the `update` command, run:
+
+```
+npx serenity-bdd --help update
+```
+
+Please note that the `update` command will try to download the `.jar` only if you don't have it cached already, or when the one you have is not up to date. Otherwise, no outbound network calls are made.
+
+#### Downloading through a proxy
+
+The `update` command picks up your proxy configuration automatically from your [NPM config](https://docs.npmjs.com/cli/v6/commands/npm-config), [`.npmrc` file](https://docs.npmjs.com/cli/v6/configuring-npm/npmrc), or environment variables.
+Please note that you only need to use one of those configuration mechanisms.
+
+##### Using NPM config (Linux, macOS, Windows)
+
+To use NPM-level configuration, run the following commands in your terminal:
+
+```console
+npm config set proxy http://[user:pwd]@domain.tld:port
+npm config set https-proxy http://[user:pwd]@domain.tld:port
+```
+
+If your proxy requires a certificate file, you can provide a path to it as follows:
+
+```console
+npm config set cafile /path/to/root-ca.pem
+```
+
+The above can also be accomplished by placing an [`.npmrc` file](https://docs.npmjs.com/cli/v6/configuring-npm/npmrc) with following contents in your home directory or your project root:
+
+```bash
+# ~/.npmrc
+proxy = http://[user:pwd]@domain.tld:port
+https-proxy = http://[user:pwd]@domain.tld:port
+
+cafile = /path/to/root-ca.pem          # optional
+noproxy = localhost,mycompany.com      # optional
+```
+
+##### Using environment variables on Linux or macOS
+
+To set your proxy on Linux or macOS, run the following commands in your terminal:
+
+```console
+export HTTP_PROXY=http://[user:pwd]@domain.tld:port
+export HTTPS_PROXY=http://[user:pwd]@domain.tld:port
+```
+
+If needed, you can also set a `NO_PROXY` variable to a comma-separated list of domains that don't require a proxy, for example:
+
+```console
+export NO_PROXY=localhost,mycompany.com
+```
+
+Please note that you can add the above commands to your shell's `~/.profile`, so that they're executed whenever you open a new terminal.
+
+##### Using environment variables on Windows
+
+To configure a proxy on Windows, run the following commands in Command Prompt:
+
+```console
+set HTTP_PROXY=http://[user:pwd]@domain.tld:port
+set HTTPS_PROXY=http://[user:pwd]@domain.tld:port
+```
+
+If you're using Powershell, run the following commands instead:
+
+```console
+$env:HTTP_PROXY = http://[user:pwd]@domain.tld:port
+$env:HTTPS_PROXY = http://[user:pwd]@domain.tld:port
+```
+
+#### Using a specific User-Agent
+
+If your artifact registry requires you to use a specific user agent, you can configure it using NPM config:
+
+```console
+npm config set user-agent "Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0"
+```
+
+#### Ignoring SSL checks
+
+You can instruct the `update` command to ignore any SSL certificate errors by providing an `--ignoreSSL` flag when running the command:
+
+```console
+npx serenity-bdd update --ignoreSSL
+```
+
+You can also disable certificate checks at the NPM config level by running:
+
+```console
+npm config set strict-ssl false
+```
+
+Alternative, you can accomplish the same with an `.npmrc` file:
+
+```bash
+# ~/.npmrc
+npm_config_strict-ssl = false
+```
+
+### Configuring Serenity BDD CLI
+
+To configure the [Serenity BDD reporting CLI](https://github.com/serenity-bdd/serenity-core),
+place a file called [`serenity.properties`](https://serenity-bdd.github.io/docs/reference/serenity-properties)
+in your project root directory. For example:
+
+```properties title="serenity.properties"
+serenity.project.name=My awesome project
+```
+
+:::tip
+Please note that Serenity BDD reporting CLI considers only those properties that are related to producing test reports.
+:::
+
+
+### Running Serenity BDD CLI
+
+To produce the Serenity BDD test report and living documentation using default settings, run:
+
+```
+npx serenity-bdd run
+```
+
+To learn more about the `run` command and how to change the defaults, run:
+
+```
+npx serenity-bdd --help run
+```
+
+## Serenity BDD best practices
+
+While Serenity BDD generates great test reports out of the box,
+by following a few simple best practices you can turn them into proper [living documentation](https://serenity-bdd.github.io/docs/reporting/living_documentation)
+for your product.
+
+In this section, we'll focus on best practices particularly relevant to Serenity/JS users.
+
+### The requirements hierarchy
+
+Organising your specs in a directory hierarchy is a great way to make them easier to navigate and understand.
+It also allows Serenity to organise your test reports in a similar way and offer insight into what requirements
+were verified at several levels of detail.
+This idea is called the "requirements hierarchy" and you can learn more about it
+in the [Serenity BDD documentation](https://serenity-bdd.github.io/docs/reporting/living_documentation#the-requirements-hierarchy).
+
+#### Requirements hierarchy for Cucumber.js projects
+
+If you're working with Cucumber.js, the root directory of the requirements hierarchy is typically called `features`
+and typically contains a flat list of `.feature` files, each representing a feature of your system:
+
+```
+features
+|- authentication.feature
+|- shopping_cart.feature
+|- checkout.feature
+|- shipping.feature
+...
+```
+
+While Cucumber.js doesn't recognise or enforce any particular directory structure, Serenity BDD recognises directories
+as representing [various levels of the requirements hierarchy](https://serenity-bdd.github.io/docs/reporting/living_documentation#common-requirements-structures).
+And so, instead of storing all the `.feature` files in a single directory, you can organise them in a directory hierarchy, where each directory
+represents a [business capability](https://serenity-bdd.github.io/docs/reporting/living_documentation#goals-capabilities-and-features) of your system:
+
+```
+features
+|- authentication
+|  |- google_sign_in.feature
+|  |- microsoft_sign_in.feature
+|  |- custom_single_sign-on.feature
+|  \- README.md
+|
+|- shopping_cart
+|  |- item_management.feature
+|  |- save_for_later.feature
+|  |- did_you_forget_something.feature
+|  \- README.md
+|
+|- checkout
+...
+```
+
+Note that in this structure, each directory contains a `README.md` file, which is a great place to document the business capability,
+lint to any external documentation, architectural diagrams, and so on. Serenity BDD parses such `README.md` files and includes their contents
+in the generated documentation.
+
+For more complex systems, you can also nest the business capability directories further to group related capabilities into themes,
+for example:
+
+```
+features
+|- security
+|  |- authentication
+|  |  |- google_sign_in.feature
+|  |  |- microsoft_sign_in.feature
+|  |  |- custom_single_sign-on.feature
+|  |  \- README.md
+|  |
+|  |- audit_trail
+|     |- monthly_report.feature
+|     |- unexpected_user_activity_alerting.feature
+|     \- README.md
+...
+```
+
+#### Requirements hierarchy for non-Cucumber.js projects
+
+If you're using any other [supported test runner](/handbook/test-runners/), Serenity BDD will still recognise the directory structure
+as the requirements hierarchy as long as you:
+- name the root directory of your requirements hierarchy `spec`, `tests`, `test` or `features` (or configure the [`specDirectory`](/handbook/reporting/serenity-bdd-reporter/#overriding-default-configuration) property of the `SerenityBDDReporter` and the `--features` parameter of `serenity-bdd run` command with a different value)
+- give your spec files a suffix recognised by Serenity BDD, such as `.spec.ts`, `.e2e.js`, or one of the [other supported file name suffixes](/api/serenity-bdd/interface/SerenityBDDReporterConfig/#specDirectory)
+
+For example, if you're using [Playwright Test](/handbook/test-runners/playwright-test/),
+[Mocha](/handbook/test-runners/mocha/), or [Jasmine](/handbook/test-runners/jasmine/) you might organise your specs as follows:
+
+```
+spec
+|- security
+|  |- authentication
+|  |  |- google_sign_in.spec.ts
+|  |  |- microsoft_sign_in.spec.ts
+|  |  |- custom_single_sign-on.spec.ts
+|  |  \- README.md
+|  |
+|  |- audit_trail
+|     |- monthly_report.spec.ts
+|     |- unexpected_user_activity_alerting.spec.ts
+|     \- README.md
+```
+
+### File naming conventions
+
+To help Serenity BDD correctly associate the test results with the right feature, you should keep each feature in a separate spec file,
+where the name of the feature is the same as the name of the spec file.
+
+If you're using [Cucumber.js](/handbook/test-runners/cucumber/), you might have a `custom_single_sign-on.feature` file
+with a matching `Feature` name:
+
+```gherkin title="custom_single_sign-on.feature"
+Feature: Custom single sign-on
+
+  As a student
+  I want to be able to sign in using my company's single sign-on solution
+  So that I don't have to remember yet another password
+
+  Scenario: Signing in with a corporate email address
+
+    Given Alice wants to access her student account details
+     When she enters her corporate email address: alice@example.org
+      And completes the sign-in process using her corporate credentials
+     Then she should be taken to her student account
+```
+
+For [Playwright Test](/handbook/test-runners/playwright-test/),
+[Mocha](/handbook/test-runners/mocha/) and [Jasmine](/handbook/test-runners/jasmine/) specs,
+you might have a `custom_single_sign-on.spec.ts` file where the outermost `describe` block has a matching name:
+
+```typescript title="custom_single_sign-on.spec.ts"
+describe('Custom single sign-on', () => {
+
+    it('allows Alice to sign in with a corporate email address', () => {
+        // ...
+    });
+});
+```
+
+:::tip How feature name matching works?
+Serenity BDD treats spaces and underscores as equivalent and performs a case-insensitive match, so `custom_single_sign-on.feature`,
+matches `Custom single sign-on` as well as `Custom Single Sign-On`.
+:::
+
+:::warning One feature, one spec file
+Try to avoid having multiple top-level `describe` blocks in a single spec file, or `it`/`test` blocks without a `describe` block
+as Serenity BDD will not be able to associate the test results with the right feature.
+:::
 
 ## Integration
 
-`SerenityBDDReporter` emits [`ArtifactGenerated`](/api/core-events/class/ArtifactGenerated) containing Serenity BDD-standard JSON reports,
+`SerenityBDDReporter` emits [`ArtifactGenerated`](/api/core-events/class/ArtifactGenerated) events containing Serenity BDD-standard JSON reports,
 which can be stored to disk by [`ArtifactArchiver`](/handbook/reporting/artifact-archiver),
-and then turned into Serenity BDD HTML reports by [Serenity BDD Reporting CLI](https://github.com/serenity-bdd/serenity-cli).
+and then turned into Serenity BDD HTML reports by [Serenity BDD Reporting CLI](https://github.com/serenity-bdd/serenity-core).
 
 ```mermaid
 graph TB
