docs(serenity-bdd): documented best practices for web UI component test directory hierarchies
Related tickets: re #1147

--- a/documentation/serenity-js.org/blog/2024-01-11-support-for-serenity-bdd-4/index.mdx
+++ b/documentation/serenity-js.org/blog/2024-01-11-support-for-serenity-bdd-4/index.mdx
@@ -19,7 +19,7 @@ tags:
 
 We've also updated the Serenity/JS Handbook to help you get the most out of the new Serenity/JS and Serenity BDD reporting features - check out:
 - [Reporting > Serenity BDD Reporter](/handbook/reporting/serenity-bdd-reporter/)
-- [Serenity BDD best practices](/handbook/reporting/serenity-bdd-reporter/#serenity-bdd-best-practices) (NEW!)
+- [Serenity BDD Best Practices](/handbook/reporting/serenity-bdd-reporter/#serenity-bdd-best-practices) (NEW!)
 
 ### Important changes
 
