--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -555,8 +555,8 @@ describe('Custom single sign-on', () => {
 ```
 
 :::tip How feature name matching works?
-Serenity BDD treats spaces and underscores as equivalent and performs a case-insensitive match, so `custom_single_sign-on.feature`,
-matches `Custom single sign-on` as well as `Custom Single Sign-On`.
+Serenity BDD treats spaces, underscores and hyphens as equivalent and performs a case-insensitive match, so `custom_single_sign-on.feature` or `custom-single-sign-on.spec.ts`
+match `Custom single sign-on` as well as `Custom Single Sign-On`.
 :::
 
 :::warning One feature, one spec file
