docs(serenity-bdd): clarified the requirement around file names for using Serenity BDD reporter
Related tickets: re #1147

--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -555,7 +555,8 @@ describe('Custom single sign-on', () => {
 ```
 
 :::tip How feature name matching works?
-Serenity BDD treats spaces, underscores and hyphens as equivalent and performs a case-insensitive match, so `custom_single_sign-on.feature` or `custom-single-sign-on.spec.ts`
+Serenity BDD treats spaces and underscores as equivalent and performs a case-insensitive match,
+so `custom_single_sign-on.feature` or `custom_single_sign-on.spec.ts`
 match `Custom single sign-on` as well as `Custom Single Sign-On`.
 :::
 
