docs(serenity-bdd): documented the new configuration options and updated the reporting guide

--- a/documentation/serenity-js.org/blog/2024-01-11-support-for-serenity-bdd-4/index.mdx
+++ b/documentation/serenity-js.org/blog/2024-01-11-support-for-serenity-bdd-4/index.mdx
@@ -41,4 +41,4 @@ If you're still using the Serenity/JS 2-style syntax for registering the `Sereni
 // ...
 ```
 
-Learn more about [Configuring Serenity BDD Reporter](/handbook/reporting/serenity-bdd-reporter/#configuring-the-serenity-bdd-reporter)
+Learn more about [Configuring Serenity BDD Reporter](/handbook/reporting/serenity-bdd-reporter/#configuration-overview).
