docs(website): updated the Serenity BDD Reporter guide

--- a/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/serenity-bdd-reporter.mdx
@@ -346,9 +346,9 @@ export const config: WebdriverIOConfig = {
 
     // ... or Mocha runner
     // mochaOpts: {
-    //     reporterOptions: [
-    //         'specDirectory=./specs'                  // optional, requirements hierarchy root
-    //     ],
+    //     reporterOptions: {
+    //         specDirectory: './specs'                 // optional, requirements hierarchy root
+    //     },
     // },
 
     runner: 'local',
@@ -407,9 +407,9 @@ exports.config = {
 
     // ... or Mocha runner
     // mochaOpts: {
-    //     reporterOptions: [
-    //         'specDirectory=./specs'                  // optional, requirements hierarchy root
-    //     ],
+    //     reporterOptions: {
+    //         specDirectory: './specs'                 // optional, requirements hierarchy root
+    //     },
     // },
 
     runner: 'local',
