docs(website): added a link to Serenity/JS  Project Templates

--- a/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
+++ b/documentation/serenity-js.org/docs/design/screenplay-pattern.mdx
@@ -73,6 +73,12 @@ The best way to illustrate the Screenplay Pattern is through a practical example
 for an online shop. The shop has a REST API that lets us configure its product catalogue with some test data,
 and a web storefront that lets customers find the products they need and make a purchase.
 
+We'll create a test scenario that uses two actors: one to set up the test data, and one to interact with the web UI.
+
+:::tip Serenity/JS Project Templates
+To follow along with the coding, get one of the [**Serenity/JS Project Templates**](/handbook/getting-started/project-templates/) as they come with everything you need to get started with Serenity/JS.
+:::
+
 ### Actors
 
 A test scenario following the Screenplay Pattern has one or multiple [**actors**](/api/core/class/Actor)
