--- a/documentation/serenity-js.org/src/pages/contributing.mdx
+++ b/documentation/serenity-js.org/src/pages/contributing.mdx
@@ -167,53 +167,97 @@ Alternatively, if you prefer to work on the pull request on your own machine ins
 
 ### Conventional commits and automated releases
 
-Serenity/JS uses [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/) standard to identify if the changes you propose require a release.
+Serenity/JS uses [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/) standard to identify if the changes you propose **require a release**.
+
+:::tip Continuous Delivery of features and fixes
+[Serenity/JS Continuous Delivery Pipeline](https://github.com/serenity-js/serenity-js/blob/main/.github/workflows/main.yaml) recognises changes you've marked as `feat` or `fix`
+and will **release them automatically to npmjs.com** when your pull request **passes the automated tests** and **gets merged to the main branch** by a Serenity/JS maintainer.
+
+The pipeline runs **thousands of package- and integration-level tests** across a number of supported Node.js runtimes, browsers,
+and operating systems to help make sure new changes don't introduce regressions and takes only about 15 minutes to complete 🚀
+:::
 
 To make it easy for you, we've added a little wizard that will help you generate a commit message compliant with the standard, and configured a pre-commit git hooks and a CI/CD pipeline-level check to ensure everything's correct.
+
+If you get stuck at any point, please feel free to reach out on the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im) and we'll help you out.
+
+:::info Your commit messages will be in the changelog
+Please pay attention to what you write in your commit messages, as messages marked as `feat` and `fix` are included in the [changelog and release notes](/changelog/).
+
+If your Pull Request contains multiple commits, and you'd rather have them [squashed before they're merged](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/incorporating-changes-from-a-pull-request/about-pull-request-merges#squash-and-merge-your-commits), please
+let us know in the description of your Pull Request and make sure that the **title of your Pull Request follows the commit message standard**, e.g. `feat(console-reporter): improved stats aggregation` or `docs(website): corrected a typo in the handbook`
+:::
 
 To use the wizard, add the files you changed to [git index](https://git-scm.com/docs/git-add) using `git add <filename>` or your favourite IDE like [VSCode](https://code.visualstudio.com/docs/editor/versioncontrol) or [JetBrains](https://www.jetbrains.com/help/idea/commit-and-push-changes.html#set-passwords-for-git-remotes)
 
 Next, invoke the following command in the root directory of your cloned Serenity/JS project:
 
-```shellsession
+```sh npm2yarn
 npm run commit
 ```
 
 Which should yield output similar to the below:
 
-```shellsession
+```sh npm2yarn
 npm run commit
 
 > serenity-js-monorepo@3.0.0-monorepo commit
-> ./node_modules/cz-customizable/standalone.js
+> bin/commit.ts
 
 cz-customizable standalone version
 All lines except first will be wrapped after 100 characters.
-? Select the TYPE of change you're proposing: (Use arrow keys)
-❯ feat:     A new feature that will be available to the developers using Serenity/JS, e.g. a new public API
-  fix:      A bug fix, prepared typically to address a specific GitHub ticket
+? Select the TYPE of change you're proposing:
+  feat:     A new feature that will be available to the developers using Serenity/JS, e.g. a new public API
+❯ fix:      A bug fix, prepared typically to address a specific GitHub ticket
   docs:     Documentation only changes affecting the website, examples, or the API docs
   style:    Changes that do not affect the meaning of the code, e.g. formatting, fixing missing semicolons, etc.
   refactor: Improvements to code that do not affect the observable behaviour of Serenity/JS
   perf:     A code change aimed at improving performance
   test:     Improvements to existing internal tests, or adding missing tests
 (Move up and down to reveal more choices)
+```
+
+For example, if you wanted to make a documentation change to the Serenity/JS website to explain the importance of commit messages, you'd select:
+`docs` as the type of change, and `website` as the scope of the change:
+```sh
+All lines except first will be wrapped after 100 characters.
+? Select the TYPE of change you're proposing: docs
+? Denote the SCOPE of this change: website
+
+? WHAT did you change? Please write a SHORT, IMPERATIVE tense description of the change:
+
+ explained the importance of commit messages
+
+? WHY did you change it? Provide a LONGER description of the motivation behind the change (optional).
+  Use "|" to break new line
+
+ This should help developers follow the commit message format conventions |
+ and make contributing to Serenity/JS easier
+
+? List any GitHub TICKETS affected by this change (optional). E.g.: #31, #34:
+ closes #2263
+
+###--------------------------------------------------------###
+docs(website): explained the importance of commit messages
+
+This should help developers follow the commit message format conventions
+and make contributing to Serenity/JS easier
+
+Related tickets: closes #2263
+###--------------------------------------------------------###
+
+? Are you sure you want to proceed with the commit above? (Yneh)
 
 ```
 
+:::tip Referencing and closing GitHub tickets
+If your change is related to a specific GitHub ticket, please mention it in your commit message when the wizard asks about it, e.g. `#2263`.
+
+If your change should _close_ the related ticket altogether,
+please use the [`closes #<ticket number>` syntax](https://docs.github.com/en/issues/tracking-your-work-with-issues/linking-a-pull-request-to-an-issue#linking-a-pull-request-to-an-issue-using-a-keyword), e.g. `closes #2263`.
+:::
+
 Once you're happy with the commit message, push your commit to your forked repository, and [raise a pull request](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request).
-
-:::note Your commit messages will be in the changelog
-Please pay attention to what you write in your commit messages, as they're automatically included in the changelog.
-
-If you'd like your pull request to be squashed before it's merged, make sure the title of your PR reflects the change you're proposing. For example `feat(console-reporter): improved stats aggregation`
-:::
-
-:::tip Did you know?
-[Serenity/JS Continuous Delivery Pipeline](https://github.com/serenity-js/serenity-js/blob/main/.github/workflows/main.yaml) implemented using GitHub Actions recognises changes you've marked as `feat` or `fix` and will release them automatically to npmjs.com when your pull request passes the automated tests and gets merged to the main branch by a Serenity/JS maintainer.
-
-The pipeline runs thousands of package- and integration-level tests across a number of supported Node.js runtimes, browsers, and operating systems and takes only about 15 minutes to complete 🚀
-:::
 
 
 ### Serenity/JS mono-repo structure
