docs(website): cleaned up the articles in the community section
Related tickets: closes #2198

--- a/documentation/serenity-js.org/community/contributing/improving-documentation.mdx
+++ b/documentation/serenity-js.org/community/contributing/improving-documentation.mdx
@@ -29,7 +29,8 @@ docs(website): fixed a typo in the XYZ article
 
 ### Serenity/JS API Docs
 
-The [Serenity/JS API Documentation](/api) is generated automatically based on the [TSDoc comments](https://typedoc.org/guides/doccomments/) in the codebase. If you spot an issue in the API docs or want to add a new example, click on the <b><i class="codicon codicon-file-code"></i></b> code icon next to the name of the class or method of interest, just like [this one here](api/core/class/Actor#Methods).
+The [Serenity/JS API Documentation](/api) is generated automatically based on the [TSDoc comments](https://typedoc.org/guides/doccomments/) in the codebase. If you spot an issue in the API docs or want to add a new example,
+ click on the <b><i class="codicon codicon-file-code"></i></b> code icon next to the name of the class or method of interest, just like [this one here](/api/core/class/Actor/#Methods).
 
 The <b><i class="codicon codicon-file-code"></i></b> code icon will take you straight to the TSDoc used to generate a given description or example, which you can fix via Pull Request the same way you'd fix the code.
 
@@ -48,7 +49,7 @@ npm start
 ```
 
 :::note
-While Docusaurus supports hot reloading, the TypeDoc API plugin [does not just](https://github.com/milesj/docusaurus-plugin-typedoc-api/issues/25). If you're working on updating the API docs, you'll need to restart the development server to see your changes.
+While Docusaurus supports hot reloading, the TypeDoc API plugin [does not just yet](https://github.com/milesj/docusaurus-plugin-typedoc-api/issues/25). If you're working on updating the API docs, you'll need to restart the development server to see your changes.
 :::
 
 To test the build process, run:
