--- a/documentation/serenity-js.org/community/contributing/index.mdx
+++ b/documentation/serenity-js.org/community/contributing/index.mdx
@@ -28,11 +28,11 @@ The most popular ways to contribute include:
 - helping us spread a good word about Serenity/JS, for example by [tweeting about your experience](https://twitter.com/intent/tweet?text=Check+out+%23fullstack+acceptance+%23testing+with+%40SerenityJS%20at%20https%3A%2F%2Fserenity-js.org&amp;url=https%3A%2F%2Fserenity-js.org%2F), or simply giving it a ⭐ on [GitHub](https://github.com/serenity-js/serenity-js)
 - up-voting the [Serenity/JS tickets](https://github.com/serenity-js/serenity-js/issues) you care about by giving them a thumbs up 👍
 - [improving documentation](/community/contributing/improving-documentation/)
-- helping maintainers answer community questions on the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im)
-- creating [educational content](/community/resources/) - blog posts, tutorials, videos are all welcome!
+- helping the maintainers answer community questions on the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im)
+- creating [community resources](/community/resources/) - blog posts, tutorials, videos are all welcome!
 - [reporting issues](/community/contributing/reporting-issues/) you encounter while using Serenity/JS
 - raising feature requests describing what Serenity/JS should also help you do
-- contributing code
+- contributing code and [proposing enhancements](/community/contributing/proposing-enhancements/)
 - sponsoring our work via the [GitHub Sponsors programme](https://github.com/sponsors/serenity-js)
 
 If you're new to open source and would like to get up to speed with the basic concepts, check out this excellent guide on ["How to make your first open source contribution"](https://egghead.io/talks/git-how-to-make-your-first-open-source-contribution) by Ceora Ford.
