--- a/documentation/serenity-js.org/community/index.mdx
+++ b/documentation/serenity-js.org/community/index.mdx
@@ -21,18 +21,19 @@ Have a question about Serenity/JS? Need help troubleshooting an issue?
 [**Serenity/JS Community Forum**](https://github.com/orgs/serenity-js/discussions) is the perfect place to connect
 with fellow developers and experts who are always ready to lend a helping hand.
 
-- Find answers to your **questions** about the framework and test automation best practices in the [**💡 How to...?**](https://github.com/orgs/serenity-js/discussions/categories/how-to) section
-- Share your Serenity/JS-related work and help the community learn from your experience in [**🙌 Show and tell**](https://github.com/orgs/serenity-js/discussions/categories/show-and-tell)
-- Share your experience with the framework in [**❤️ Kind words**](https://github.com/orgs/serenity-js/discussions/categories/kind-words)
+Check out the below categories to get started:
+- [**How to...? 💡**](https://github.com/orgs/serenity-js/discussions/categories/how-to) - Find answers to your **questions** about the framework and test automation best practices
+- [**Show and tell 🙌**](https://github.com/orgs/serenity-js/discussions/categories/show-and-tell) - Share your Serenity/JS-related work and help the community learn from your experience
+- [**Kind words ❤**](https://github.com/orgs/serenity-js/discussions/categories/kind-words) - Share your experience with the framework and get featured on the Serenity/JS website
 
 ## Serenity/JS on GitHub
 
 Please make sure to star [**⭐️ Serenity/JS on GitHub**](https://github.com/serenity-js/serenity-js) to help others discover the framework!
 
 You can also use the [Serenity/JS GitHub issue tracker](https://github.com/serenity-js/serenity-js/issues) to open a ticket to:
-- [Report a bug](https://github.com/serenity-js/serenity-js/issues/new?assignees=&labels=&projects=&template=bug_report.yml&title=Feature+X+fails+when+Y+happens)
-- [Request a feature](https://github.com/serenity-js/serenity-js/issues/new?assignees=&labels=&projects=&template=feature_request.yml&title=Serenity%2FJS+should+...)
-- [Report a security vulnerability](https://github.com/serenity-js/serenity-js/security/advisories/new)
+- [Report a bug 🐛](https://github.com/serenity-js/serenity-js/issues/new?assignees=&labels=&projects=&template=bug_report.yml&title=Feature+X+fails+when+Y+happens)
+- [Request a feature ⭐️](https://github.com/serenity-js/serenity-js/issues/new?assignees=&labels=&projects=&template=feature_request.yml&title=Serenity%2FJS+should+...)
+- [Report a security vulnerability 🧐](https://github.com/serenity-js/serenity-js/security/advisories/new)
 
 ## Serenity/JS Educational Resources
 
